--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.15.4",
+    "bcrypt": "^5.0.1",
     "meteor-node-stubs": "^1.2.1",
     "svelte": "^3.46.4"
   },
