--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --port 8080 --host 0.0.0.0",
+    "prod": "concurrently \"npm run start\" \"npm run start:server\"",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
@@ -20,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "body-parser": "^1.20.0",
+    "concurrently": "^7.1.0",
     "express": "^4.18.1",
     "mongoose": "^6.3.2",
     "rxjs": "~7.5.0",
