added auth, images, mobile layouts, and more

--- a/package.json
+++ b/package.json
@@ -4,27 +4,38 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --port 8080 --host 0.0.0.0",
-    "prod": "concurrently \"npm run start\" \"npm run start:server\"",
+    "prod": "concurrently \"npm run watch\" \"npm run start:server\"",
+    "dev": "concurrently \"npm run start\" \"npm run start:server\"",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "start:server": "nodemon server.js"
+    "start:server": "node server.js"
   },
   "private": true,
   "dependencies": {
+    "-": "^0.0.1",
     "@angular/animations": "~13.3.0",
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
     "@angular/forms": "~13.3.0",
+    "@angular/material": "^13.3.6",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "concurrently": "^7.1.0",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
+    "express-rate-limit": "^6.4.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.2",
+    "mongoose-unique-validator": "^3.0.0",
+    "multer": "^1.4.4",
+    "ngx-cookie-service": "^13.2.0",
     "rxjs": "~7.5.0",
+    "save": "^2.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
