--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "start:server": "node server.js"
+    "start:server": "node server.js",
+    "dev:server": "nodemon server.js"
   },
   "private": true,
   "dependencies": {
@@ -36,6 +37,7 @@
     "ngx-cookie-service": "^13.2.0",
     "rxjs": "~7.5.0",
     "save": "^2.5.0",
+    "sweetalert2": "^11.4.10",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
