likes and replies <3

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve --port 8080 --host 0.0.0.0",
     "prod": "concurrently \"npm run watch\" \"npm run start:server\"",
-    "dev": "concurrently \"npm run start\" \"npm run start:server\"",
+    "dev": "concurrently \"npm run start\" \"npm run dev:server\"",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
@@ -26,10 +26,13 @@
     "@angular/router": "~13.3.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "compression": "^1.7.4",
     "concurrently": "^7.1.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "express-rate-limit": "^6.4.0",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.2",
     "mongoose-unique-validator": "^3.0.0",
