--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --port 8080 --host 0.0.0.0",
+    "start": "ng serve --live-reload=false --port 8080 --host 0.0.0.0",
     "prod": "concurrently \"npm run watch\" \"npm run start:server\"",
     "dev": "concurrently \"npm run start\" \"npm run dev:server\"",
     "build": "ng build",
@@ -33,6 +33,7 @@
     "express": "^4.18.1",
     "express-rate-limit": "^6.4.0",
     "fs": "^0.0.1-security",
+    "helmet": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.2",
     "mongoose-unique-validator": "^3.0.0",
