--- a/.browserslistrc
+++ b/.browserslistrc
@@ -7,9 +7,11 @@
 
 # You can see what browsers were selected by your queries by running:
 #   npx browserslist
+# You can update the browserslist database by running:
+#   npx browserslist@latest --update-db
 
-last 1 Chrome version
-last 1 Firefox version
+last 2 Chrome version
+last 2 Firefox version
 last 2 Edge major versions
 last 2 Safari major versions
 last 2 iOS major versions
