--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express-rate-limit": "^6.4.0",
     "fs": "^0.0.1-security",
     "helmet": "^5.0.2",
+    "jimp": "^0.16.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.2",
     "mongoose-unique-validator": "^3.0.0",
