--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "express-rate-limit": "^6.4.0",
     "fs": "^0.0.1-security",
     "helmet": "^5.0.2",
+    "ioredis": "^5.0.5",
     "jimp": "^0.16.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.2",
     "mongoose-unique-validator": "^3.0.0",
     "multer": "^1.4.4",
     "ngx-cookie-service": "^13.2.0",
+    "redis": "^4.1.0",
     "rxjs": "~7.5.0",
     "save": "^2.5.0",
     "sweetalert2": "^11.4.10",
