--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "express": "^4.18.1",
     "express-asyncify": "^1.0.1",
     "express-rate-limit": "^6.4.0",
+    "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
     "helmet": "^5.0.2",
     "ioredis": "^5.0.5",
@@ -57,6 +58,7 @@
     "socket.io": "^4.5.1",
     "sweetalert2": "^11.4.10",
     "tslib": "^2.3.0",
+    "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
